--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.19.1",
-    "express-session": "^1.18.0"
+    "express-session": "^1.18.0",
+    "firebase-admin": "^12.3.1"
   }
 }
