--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "start": "node --watch index.js",
-    "dev": "node --watch index.js",
+    "start": "node --watch api/index.js",
+    "dev": "node --watch api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
