--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.19.1",
     "express-session": "^1.18.0",
-    "firebase-admin": "^12.3.1"
+    "firebase-admin": "^12.3.1",
+    "vercel": "^37.2.1"
   }
 }
